<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/device_list_style" >
    
    <TableRow 
        android:id="@+id/tabRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_rule_menu_selector"
            android:src="@drawable/btn_delete" />

        <ImageButton 
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_save"
            android:background="@drawable/btn_rule_menu_selector"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/mCondTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/cyan"
            android:text="@string/condition"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tvTittle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/cyan"
            android:text="@string/from"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tvTittle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/cyan"
            android:text="@string/to"
            android:textSize="20sp" />
        
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <anh.trinh.ble_demo.custom_view.NDSpinner
            android:id="@+id/mCondChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <LinearLayout
                android:id="@+id/llDevVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:weightSum="1" >

                <anh.trinh.ble_demo.custom_view.NDSpinner
                    android:id="@+id/condDevChoose"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5" />

                <EditText
                    android:id="@+id/condDevVal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTimeRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" android:baselineAligned="false">

                <TextView
                    android:id="@+id/fromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    style="@android:style/Widget.Holo.Spinner"/>
                
                
                <TextView
                    android:id="@+id/fromTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    style="@android:style/Widget.Holo.Spinner"/>


                <TextView
                    android:id="@+id/toDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    style="@android:style/Widget.Holo.Spinner"/>
                
                <TextView
                    android:id="@+id/toTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    style="@android:style/Widget.Holo.Spinner"/>
                
            </LinearLayout>
        </FrameLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/mActTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/cyan"
            android:text="@string/action"
            android:textSize="20sp" 
            android:layout_weight="1"/>
        
        <TextView
            android:id="@+id/tvTittle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/cyan"
            android:text="@string/device"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/tvTittle4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/cyan"
            android:text="@string/value"
            android:textSize="20sp" />
        
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <anh.trinh.ble_demo.custom_view.NDSpinner
            android:id="@+id/mActChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:weightSum="1" >

            <anh.trinh.ble_demo.custom_view.NDSpinner
                android:id="@+id/actDevChoose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <EditText
                android:id="@+id/actDevVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </TableRow>

</TableLayout>
